body overflow correction

--- a/style.less
+++ b/style.less
@@ -39,12 +39,32 @@
  *  General stuff, tag-level
  */
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
     color: @mainTextColor;
     // font-family: "input sans";
     font-family: "Lekton", sans-serif;
-    font-size: 1.2rem;
-    overflow: scroll;
+    // system font-stack from medium
+    // font-family: -apple-system,
+    //     BlinkMacSystemFont,
+    //     "Segoe UI",
+    //     Roboto,
+    //     Oxygen,
+    //     Ubuntu,
+    //     Cantarell,
+    //     "Open Sans",
+    //     "Helvetica Neue",
+    //     sans-serif;
+
+    // font-size: 1.2rem;
+    overflow-y: scroll;
     line-height: 1.5rem;
     @media (max-width: @screen-small) {
         font-size: 1rem;
